# API_shared_snippet

./: .gitignore  Cargo.toml  flamegraph(no load).svgZone.Identifier
src/: api.rs  create_clients.rs  load_resources.rs  main.rs
src/dapps/: across.rs  balancer.rs  bungee.rs  debridge.rs  jumper.rs  koi.rs
src/dapps/abi/across/: abi.json
src/dapps/abi/allbridge/: tokens.json
src/dapps/abi/hyphen/: abi.json  chains.json  tokens.json
src/dapps/abi/jumper/: paths.json
src/dapps/abi/layerswap/: paths.json
src/dapps/abi/native/: chains.json  tokens.json
src/dapps/abi/odos/: paths.json
src/dapps/abi/owlto/: paths.json
src/dapps/abi/stargate_v2/: abi.json  tokens.json
src/dapps/abi/symbiosis/: paths.json
src/dapps/abi/synapse/: paths.json
src/dapps/abi/wowmax/: chains.json
src/dapps/abi/xy/: paths.json
src/paths/: mod.rs  quote.rs  resources.rs  validate_params.rs
src/paths/utils/: deserialization_helpers.rs  mod.rs
src/services/: approval.rs  mod.rs  quote_router.rs  quote_service.rs
src/utils/: allowance_checker.rs  balance_checker.rs  fetch_token_details.rs  filter_dapps.rs  format_swap_details.rs  mod.rs  serializer.rs  token_conversion.rs  token_storage.rs  utils.rs
