[package]
name = "aggregate_api"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3       # Highest optimization level



[dependencies]
tokio = { version = "1", features = ["full", "time"] }
axum = "0.6.18"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors", "limit", "fs"] }
dashmap = "5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.32", features = ["preserve_order"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
ethers = "2.0"
url = "2.2"
futures = "0.3"
rayon = "1.7"
lazy_static = "1.4.0"
indexmap = "1.9"
tokio-stream = "0.1"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.1"
hex = "0.4.3"
once_cell = "1.8"
ethabi = "18.0.0"
ethereum-types = "0.14.1"
serde_urlencoded = "0.7"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.13"
serde_qs = "0.10"
web3 = "0.19.0"
rand = { version = "0.8", features = ["std"] }
rust_decimal = "1.26"
hyper = { version = "0.14", features = ["full"] }
pprof = { version = "0.11", features = ["flamegraph"] }